--- a/Mcart/src/app/Login/admin/admin.component.html
+++ b/Mcart/src/app/Login/admin/admin.component.html
@@ -3,15 +3,19 @@
     <div class="row g-0">
 
         <div class="col-sm-2 border bg-light text-center leftsideitems">
-            <div *ngFor="let menuItem  of menus" (click)="onMenuSelect(menuItem)">
+            <div *ngFor="let menuItem  of menus"   [routerLink]="[menuItem.id===1?'productlist':'userlist']"    (click)="onMenuSelect(menuItem)">
                 <span> {{menuItem.name}}</span>
             </div>
         </div>
         
-        <div class="col-sm-10">
+        <!-- <div class="col-sm-10">
             <app-product-list *ngIf="this.menuItemId == 1"> </app-product-list>
             <app-product-list *ngIf="this.menuItemId == 2"> </app-product-list>
+        </div> -->
+        <div class="col-sm-10">
+            <router-outlet></router-outlet>
         </div>
+        
 
     </div>
 
