--- a/Mcart/src/app/app.component.html
+++ b/Mcart/src/app/app.component.html
@@ -13,23 +13,25 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#" (click)="onNavClick(1)" >Admin</a>
+            <a class="nav-link" routerLink="admin" >Admin</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" (click)="onNavClick(2)">User</a>
+            <a class="nav-link" routerLink="user" >User</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" (click)="onNavClick(3)">Practice</a>
+            <a class="nav-link" routerLink="practice" >Practice</a>
           </li>  
         </ul>
       </div>
     </div>
   </nav>
 
-<div [ngSwitch]="selectedNavId">
+<!-- <div [ngSwitch]="selectedNavId">
     <app-login-admin *ngSwitchCase="1" ></app-login-admin>
     <app-login-user *ngSwitchCase="2" ></app-login-user>
     <app-practice *ngSwitchCase="3" ></app-practice>
     <app-login-admin *ngSwitchDefault ></app-login-admin>
-
+</div> -->
+<div>
+  <router-outlet></router-outlet>
 </div>
