--- a/Mcart/src/app/product/product.component.html
+++ b/Mcart/src/app/product/product.component.html
@@ -3,13 +3,17 @@
 
     <form>
         <div class="mb-3 m-3">
-            <label for="#id"> Product Id :</label>
-            <input type="number" class="form-control" name="id" [(ngModel)]="product.id" disabled/>
+            <!-- <label for="#id"> Product Id :</label>
+            <input type="number" class="form-control" name="id" [(ngModel)]="product.id" disabled/> -->
 
             <label for="#name"> Product Name :</label>
             <input type="text" class="form-control" id="name" name="name" [(ngModel)]="product.name" />
         </div>
-        <span class="btn btn-primary" (click)="onSubmit();"> Submit </span>
+        <div class="mb-3 m-3">
+
+            <span class="btn btn-primary" (click)="onSubmit();"> Submit </span>
+
+        </div>
     </form>
 </div>
 
