--- a/Mcart/src/styles.css
+++ b/Mcart/src/styles.css
@@ -5,3 +5,11 @@
     font-size: 30px;
     margin: 10px;
 }
+
+input.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
+
+textarea.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
