--- a/Mcart/src/app/practice/practice.component.html
+++ b/Mcart/src/app/practice/practice.component.html
@@ -1,5 +1,8 @@
 
 <div class="container">
     <h4 leftsideitem [color]="'red'" [colorOnLeave]="'transparent'"> Mouse Over </h4>
+
+    <button (click)="get()"> GET </button>
+    <button (click)="post()"> Post </button>
 </div>
 
