--- a/Mcart/src/app/app.component.html
+++ b/Mcart/src/app/app.component.html
@@ -5,26 +5,40 @@
         <h1>Bootstrap 5 is working fine with Angular 13!!</h1>
       </div> -->
 
-     
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Mcart</a>
-      
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="admin" >Admin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="user" >User</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="practice" >Practice</a>
-          </li>  
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Mcart</a>
+
+    
+      <ul class="navbar-nav justify-content-end gray">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="admin">Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="user">User</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="practice">Practice</a>
+        </li>
+        <li class="nav-item " *ngIf="!isAuthenticated">
+          <a class="nav-link" routerLink="auth" style="color: white"> Sign in</a>
+        </li>
+        <li class="nav-item " *ngIf="isAuthenticated">
+          <a class="nav-link" routerLink="auth" style="color: white" (click)="onSignOutClick()">Sign out</a>
+        </li>
+      </ul>
+
+      <!-- <ul class="nav justify-content-end">
+        <li class="nav-item d-flex">
+          <a class="nav-link" routerLink="auth">Sign out</a>
+        </li>
+
+      </ul> -->
+
+    
+  </div>
+</nav>
 
 <!-- <div [ngSwitch]="selectedNavId">
     <app-login-admin *ngSwitchCase="1" ></app-login-admin>
